--- a/sdk/android_sdk/SDK/AndroidManifest.xml
+++ b/sdk/android_sdk/SDK/AndroidManifest.xml
@@ -11,9 +11,7 @@
     <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_LOGS"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
@@ -28,8 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".secondActivity"></activity>
-        <meta-data android:name="UMS_APPKEY" android:value="unoernsswfd139xk"/>
+        <meta-data android:name="UMS_APPKEY" android:value="1898f6bbdbd39ac0d89b21ce0f9b7226"/>
     </application>
 
 </manifest>
