--- a/.arcconfig
+++ b/.arcconfig
@@ -1,4 +1,4 @@
 {
-  "project_id" : "cobubrazor",
-  "conduit_uri" : "http://192.168.1.3:81"
+  "project_id" : "opencobub",
+  "conduit_uri" : "http://pha.cobub.cn"
 }
