--- a/sdk/iOS_sdk/UMSAgentExample/UMSAgentExampleTests/UMSAgentExampleTests-Info.plist
+++ b/sdk/iOS_sdk/UMSAgentExample/UMSAgentExampleTests/UMSAgentExampleTests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.wbtech.ums.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.wbkit.igetui</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
