--- a/sdk/WinPhone_sdk/UMSAgent/UMSAgent.csproj
+++ b/sdk/WinPhone_sdk/UMSAgent/UMSAgent.csproj
@@ -74,9 +74,11 @@
     <Compile Include="MyObject\ExceptionContainer.cs" />
     <Compile Include="MyObject\OnLineConfig.cs" />
     <Compile Include="MyObject\PageInfo.cs" />
+    <Compile Include="MyObject\Pushid.cs" />
     <Compile Include="MyObject\Tag.cs" />
     <Compile Include="MyObject\UpdatePreference.cs" />
     <Compile Include="MyObject\UpdateRet.cs" />
+    <Compile Include="MyObject\Userid.cs" />
     <Compile Include="MyObject\UserRepolicy.cs" />
     <Compile Include="UMSApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
