--- a/sdk/android_sdk/Sample/project.properties
+++ b/sdk/android_sdk/Sample/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-8
-android.library.reference.1=../SDK
+android.library.reference.1=../../../../cobub_android/sdk
